# ev-nation

./: .env.example  .gitignore  README.md  alembic.ini  compress_images.py  deploy.sh  dump_schema.py  evnationsre.conf  pyproject.toml  requirements.txt  seed.py  seed_data.py  setup_server.sh
alembic/: env.py
alembic/versions/: 20260415_0001_initial_schema.py  3f745beeb4f1_add_blog_models.py  609ce4fcfdc6_add_cart_and_order_tables.py  616f44b8c6b6_add_variant_id_to_product_images.py  717a207b919a_rename_metadata_to_attributes_in_cart_.py  adceb3b886e3_add_categories_model.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: bootstrap.py  config.py  errors.py  normalization.py  security.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  admin_user.py  blog.py  cart.py  category.py  enums.py  lead.py  mixins.py  order.py  product.py  user.py
app/repositories/: admin_user_repository.py  blog_repository.py  cart_repository.py  category_repository.py  lead_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: admin_auth.py  blog.py  cart.py  category.py  lead.py  order.py  product.py  user.py
app/services/: admin_auth_service.py  blog_service.py  cart_service.py  category_service.py  lead_service.py  order_service.py  (+3 more)
data/: bike1.json  bike10.json  bike11.json  bike12.json  bike13.json  bike2.json  bike3.json  bike4.json  bike5.json  bike6.json  bike7.json  bike8.json  bike9.json  ev_nation.db
docs/: backend_schema_spec.md  manual_test_setup.md
scripts/: create_admin.py  start_local.ps1
(+50 files in other folders)
