[project]
name = "ev-nation-backend"
version = "0.1.0"
description = "FastAPI backend for the EV Nation product catalog and lead system."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
